--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </table>
   </div>
 
-<script type="text/javascript" src="../CONTROLLER/app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
         crossorigin="anonymous"></script>
