--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
-    <title>Document</title>
+    <title>Admin de Tareas</title>
 </head>
 <body>
 <div class="container mt-4">
+    <h6 class="text-left  "><span class="text-secondary">Desarrollado </span> Por <span class="text-secondary"> Wilson</span></h6>
     <h2 class="display-4 text-center">Actividades para <span class="text-primary">HOY</span></h2>
     <h5 class="text-center  "><span class="text-secondary">Registra y controla </span> tus actividades <span class="text-secondary">diarias mas importantes</span></h5>
     
