REparacion de Bug
se reparo la eliminacion y la carga de datos

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <tr>
                 <th>Actividad</th>
                 <th>Lugar</th>
-                <th>descripcion</th>  
+                <th>descr</th>  
+                <th>ID</th>  
             </tr>
         </thead>
         <tbody id="tarea-list">
